kubernetes/apps/monitoring/mimir/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mimir
  name: mimir
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: mimir
  replicas: 3
  template:
    metadata:
      labels:
        app: mimir
    spec:
      containers:
        - name: nginx-auth-proxy
          image: nginx:1.25-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http-nginx
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: mimir-config
              subPath: nginx.conf
        - name: mimir
          image: grafana/mimir:2.10.5
          imagePullPolicy: IfNotPresent
          command:
            - '/bin/mimir'
            - '-config.file=/etc/config/mimir.yaml'
            - '-runtime-config.file=/etc/config/runtime.yaml'
          ports:
            - containerPort: 8080
              name: http-mimir
              protocol: TCP
            - containerPort: 7946
              name: memberlist
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /etc/config/
              name: processed
              readOnly: true
      volumes:
        - name: mimir-config
          configMap:
            name: grafana-mimir-config
            items:
              - key: mimir.yaml
                path: mimir.yaml
              - key: nginx.conf
                path: nginx.conf
        - name: processed
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mimir
  name: mimir
  namespace: monitoring
spec:
  ports:
    - name: http-nginx
      port: 80
      protocol: TCP
      targetPort: 80
    - name: http-mimir
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: memberlist
      port: 7946
      protocol: TCP
      targetPort: 7946
  selector:
    app: mimir
  type: ClusterIP
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-mimir
  namespace: monitoring
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`mimir.midka.dev`)
      services:
        - name: mimir
          port: 80
          kind: Service
  tls:
    certResolver: le
